# uom-term1-ai-rag

./: README.md  api.py  chunks.py  main.ipynb  pyproject.toml  reader.py
